some changed